fix: comment annotation table not aligned - regression from 8379ae65dd713c30ac729ae10a2d78cfc98e9a6c

--- a/browser/css/mobilewizard.css
+++ b/browser/css/mobilewizard.css
@@ -1011,7 +1011,7 @@ label.disabled {
 
 .ui-edit.mobile-wizard,
 .ui-textarea.mobile-wizard,
-.cool-annotation-table {
+#mobile-wizard-content .cool-annotation-table {
 	/*
 	, textarea was also here assign but it was messing up with all textareas (annotations on desktop and mobile):
 	- added 93038: jsdialog: style dialogs; a5016d547c6242f6f9b28748b5724b0bc10cdb67
